--- a/Components-Templetes-Deep-Dive/src/app/dashboard/server-status/server-status.component.html
+++ b/Components-Templetes-Deep-Dive/src/app/dashboard/server-status/server-status.component.html
@@ -1,10 +1,20 @@
-@if (currentStatus === 'online') {
-<p>Servers are online</p>
-<p>All systems are operational.</p>
-} @else if (currentStatus === 'offline') {
-<p>Servers are offline</p>
-<p>Functionality should be restored soon.</p>
-} @else {
-<p>Server status is unknown</p>
-<p>Fetching server status failed.</p>
-}
+<!--Hur css [class] kan användas för dyamisk data,  eftersom - inte kan används konverteras css klassen till en sträng.-->
+<div
+  [class]="{ 
+    status: true,
+    'status-online': currentStatus === 'online',
+    'status-offline': currentStatus === 'offline',
+    'status-unknown': currentStatus === 'unknown',
+}"
+>
+  @if (currentStatus === 'online') {
+  <p>Servers are online</p>
+  <p>All systems are operational.</p>
+  } @else if (currentStatus === 'offline') {
+  <p>Servers are offline</p>
+  <p>Functionality should be restored soon.</p>
+  } @else {
+  <p>Server status is unknown</p>
+  <p>Fetching server status failed.</p>
+  }
+</div>
